# tg-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: handlers.py  index.py  llm.py  main.py  models.py
